feat(main): criado interfaces, repository  e entidades

--- a/ControleEstoque.Api/appsettings.json
+++ b/ControleEstoque.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "ControleEstoqueConnection": "Data Source=LAPTOP-563RGJKO\\SQLEXPRESS;Initial Catalog=ControleEstoqueDb;Integrated Security=True;TrustServerCertificate=True;"
+  },
+
   "AllowedHosts": "*"
 }
