--- a/ControleEstoque.Application/ControleEstoque.Application.csproj
+++ b/ControleEstoque.Application/ControleEstoque.Application.csproj
@@ -1,5 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\ControleEstoque.Domain\ControleEstoque.Domain.csproj" />
+    <ProjectReference Include="..\ControleEstoque.Shared\ControleEstoque.Shared.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
